--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
     <audio id=audioStartCoffeeInterval src="sound/tspt_pull_bell_02_065.mp3"></audio>
     <audio id=audioStartTimeoutLunch src="sound/mp3_32306.mp3"></audio>
 
+    <div class="game_end z-10">
+        <div class="game_stop dispnon">
+            <p>на сегодня хватит, приходите завтра</p>
+        </div>
+        <div class="error dispnon">
+            <p>что то пошло ни так, перезагрузите страницу</p>
+        </div>
+    </div>
+
     <div class="base">
         <div class="img">
             <img id="img_obj0" class="img_obj0" src="img/41185.svg" alt="начало">
-            <img id="img_obj1" class="img_obj1 dispnon" src="img/309508.svg" alt="начало">
-            <img id="img_obj2" class="img_obj2 dispnon" src="img/3261117.svg" alt="начало">
-            <img id="img_obj3" class="img_obj3 dispnon" src="img/1299556.svg" alt="начало">
+            <img id="img_obj1" class="img_obj1 dispnon" src="img/309508.svg" alt="помидор">
+            <img id="img_obj2" class="img_obj2 dispnon" src="img/3261117.svg" alt="перекур">
+            <img id="img_obj3" class="img_obj3 dispnon" src="img/1299556.svg" alt="перерыв">
         </div>
         <div class="time-screen">
             <div class="time-screen_min">25</div>
